--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>أفضل 7 مانهوات</title>
+<h1>أفضل 10 مانهوات مترجمة</h1>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
