--- a/index.html
+++ b/index.html
@@ -1,42 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-<h1>أفضل 10 مانهوات مترجمة</h1>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>أفضل 10 مانهوات مترجمة</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>أفضل 10 مانهوات مترجمة</h1>
-  <div class="manhwa-list">
-    <a href="manhwas/manhwa1.html">
-      <img src="assets/cover1.jpg" alt="مانهوا الأكشن">
-      <p>مانهوا الأكشن</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover2.jpg" alt="مانهوا الغموض">
-      <p>مانهوا الغموض</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover3.jpg" alt="مانهوا الرعب">
-      <p>مانهوا الرعب</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover4.jpg" alt="مانهوا الفانتازيا">
-      <p>مانهوا الفانتازيا</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover5.jpg" alt="مانهوا الرومانسية">
-      <p>مانهوا الرومانسية</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover6.jpg" alt="مانهوا المدرسة">
-      <p>مانهوا المدرسة</p>
-    </a>
-    <a href="#">
-      <img src="assets/cover7.jpg" alt="مانهوا تاريخية">
-      <p>مانهوا تاريخية</p>
-    </a>
-  </div>
-</body>
-</html>
+
+  <header>
+    <h1>أفضل 10 مانهوات مترجمة</h1>
+    <p>تصفح مجموعة مختارة من أفضل القصص الكورية المترجمة للعربية!</p>
+  </header>
+
+  <main class="manhwa-list">
+    <!-- مانهوا رقم 1
