--- a/index.html
+++ b/index.html
@@ -17,4 +17,46 @@
       <img src="cover1.jpg" alt="مانهوا 1" />
       <h2>مانهوا 1</h2>
     </div>
-    <div class="man
+    <div class="manhwa-card">
+      <img src="cover2.jpg" alt="مانهوا 2" />
+      <h2>مانهوا 2</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover3.jpg" alt="مانهوا 3" />
+      <h2>مانهوا 3</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover4.jpg" alt="مانهوا 4" />
+      <h2>مانهوا 4</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover5.jpg" alt="مانهوا 5" />
+      <h2>مانهوا 5</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover6.jpg" alt="مانهوا 6" />
+      <h2>مانهوا 6</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover7.jpg" alt="مانهوا 7" />
+      <h2>مانهوا 7</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover8.jpg" alt="مانهوا 8" />
+      <h2>مانهوا 8</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover9.jpg" alt="مانهوا 9" />
+      <h2>مانهوا 9</h2>
+    </div>
+    <div class="manhwa-card">
+      <img src="cover10.jpg" alt="مانهوا 10" />
+      <h2>مانهوا 10</h2>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 موقع المانهوات - جميع الحقوق محفوظة</p>
+  </footer>
+</body>
+</html>
