--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>أفضل 10 مانهوات مترجمة</title>
+  <title>manhwa-top-10-arabic</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
-    <h1>أفضل 10 مانهوات مترجمة</h1>
+    <img src="logo.png" alt="manhwa-top-10-arabic logo" class="logo-img">
     <p>استمتع بقراءة أفضل القصص الكورية المترجمة للعربية!</p>
   </header>
 
@@ -24,34 +25,6 @@
     <div class="manhwa-card">
       <img src="cover3.jpg" alt="مانهوا 3" />
       <h2>مانهوا 3</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover4.jpg" alt="مانهوا 4" />
-      <h2>مانهوا 4</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover5.jpg" alt="مانهوا 5" />
-      <h2>مانهوا 5</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover6.jpg" alt="مانهوا 6" />
-      <h2>مانهوا 6</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover7.jpg" alt="مانهوا 7" />
-      <h2>مانهوا 7</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover8.jpg" alt="مانهوا 8" />
-      <h2>مانهوا 8</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover9.jpg" alt="مانهوا 9" />
-      <h2>مانهوا 9</h2>
-    </div>
-    <div class="manhwa-card">
-      <img src="cover10.jpg" alt="مانهوا 10" />
-      <h2>مانهوا 10</h2>
     </div>
   </main>
 
