--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -6,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>manhwa-top-10-arabic</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
-    <h1 class="logo">manhwa‑top‑10‑arabic</h1>
+    <img src="logo.png" alt="manhwa-top-10-arabic logo" class="logo-img">
     <p>استمتع بقراءة أفضل القصص الكورية المترجمة للعربية!</p>
   </header>
 
