--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>manhwa-top-10-arabic</title>
+  <title>أفضل 10 مانهوات مترجمة</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="manhwa-top-10-arabic logo" class="logo-img">
+    <img src="logo.png" alt="manhwa-top-10-arabic" class="logo-img" />
     <p>استمتع بقراءة أفضل القصص الكورية المترجمة للعربية!</p>
   </header>
 
@@ -29,7 +28,7 @@
   </main>
 
   <footer>
-    <p>© 2025 موقع المانهوات - جميع الحقوق محفوظة</p>
+    <p>© 2025 موقع المانهوا العربي</p>
   </footer>
 </body>
 </html>
